fix: 코치가 못먹는 메뉴를 입력받을 때 메뉴 0개, 1개, 2개의 경우를 확실히 하도록 수정